2024-05-25T16:13:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9236707448 # 305
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
* notice: last 14d: unq all: 4 22
* notice: prev accum: outdated-unq outdated-all / unq all: 908 1654 / 924 1678
* notice: next accum: outdated-unq outdated-all / unq all: 910 1656 / 924 1678
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-11] / []

2024-05-25T00:54:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9231636776 # 303
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
* notice: last 14d: unq all: 5 23
* notice: prev accum: outdated-unq outdated-all / unq all: 907 1651 / 923 1677
* notice: next accum: outdated-unq outdated-all / unq all: 908 1654 / 924 1678
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-10] / [2024-05-11 2024-05-24]

2024-05-24T00:56:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9216943137 # 300
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-24
* notice: last 14d: unq all: 6 25
* notice: prev accum: outdated-unq outdated-all / unq all: 907 1651 / 922 1676
* notice: next accum: outdated-unq outdated-all / unq all: 907 1651 / 923 1677
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-10 2024-05-23]

2024-05-23T16:17:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9211439450 # 299