@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-25T16:13:46Z",
+  "timestamp" : "2024-05-26T01:00:31Z",
   "count_outdated" : 1656,
   "uniques_outdated" : 910,
-  "count" : 1678,
-  "uniques" : 924,
+  "count" : 1679,
+  "uniques" : 925,
   "clones" : [
     {
       "timestamp": "2024-05-13T00:00:00Z",
@@ -106,6 +106,15 @@
     },
     {
       "timestamp": "2024-05-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
