@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 23,
   "uniques": 4,
   "clones": [
     {
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2024-05-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
